--- a/ShopTARge23/ShopTARge23/appsettings.json
+++ b/ShopTARge23/ShopTARge23/appsettings.json
@@ -4,7 +4,7 @@
   "EmailPassword": "semn tnmv wosb cdwd",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ShopTARge23;Trusted_Connection=true;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ShopTARge23;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
 
   "Logging": {
